fix CheckBox Collapse Loading Pagination Select TreeView css bug

--- a/src/CheckBox/index.module.less
+++ b/src/CheckBox/index.module.less
@@ -31,6 +31,7 @@
     height: 12px;
     margin-left: 5px;
     color: #fff;
+    background: #fff;
     border: 1px solid #d9d9d9;
     transition: 0.3s linear;
     &:hover {
