--- a/src/Collapse/style/index.module.less
+++ b/src/Collapse/style/index.module.less
@@ -1,5 +1,6 @@
 .collapse-box {
   width: 100%;
   padding: 0 15px;
+  background: #fff;
   border-radius: 5px;
 }
