--- a/src/Pagination/index.module.less
+++ b/src/Pagination/index.module.less
@@ -10,6 +10,7 @@
   font-size: 14px;
   line-height: 30px;
   text-align: center;
+  background: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
   cursor: pointer;
