--- a/src/Select/index.module.less
+++ b/src/Select/index.module.less
@@ -21,6 +21,7 @@
     justify-content: space-between;
     height: 100%;
     padding: 0 5px;
+    background: #fff;
     .size {
       margin-right: 5px;
     }
