--- a/src/TreeView/index.module.less
+++ b/src/TreeView/index.module.less
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   padding: 0 10px 0 10px;
   overflow: hidden;
-  background-color: #fff;
   border-radius: 0 2px 2px 0;
   transition: 0.2s linear;
   .treeNode {
